# sem-vii-pracs

BDCIL/: BDCIL_Experiment_6_Spark.ipynb  Experiment 2.ipynb  Experiment 3.ipynb  Experiment 7.ipynb  pyproject.toml
BDCIL/Experiment 3 - Hadoop and Spark/: ReadMe.md  hadoop_setup_bash.sh  hadoop_setup_zsh.sh
BDCIL/Experiment 4 - Hadoop and Spark/: ReadMe.md  hadoop_setup_bash.sh  hadoop_setup_zsh.sh
NLP/: Experiment 2.ipynb  Experiment 3.ipynb  Experiment 5.ipynb  pyproject.toml
PM/: Experiment 1.ipynb  Experiment 2.ipynb  pyproject.toml
